<resources>
    <string name="app_name">Pratica5-INF311</string>
    <string name="nome_do_local">Nome do local:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="categoria_do_local">Categoria do local:</string>
    <string name="posicionamento_global">Posicionamento Global</string>
    <string name="check_in">CHECK-IN</string>
    <string name="mapa_de_check_in">Mapa de Check-in</string>
    <string name="gestao_de_check_in">Gestão de Check-in</string>
    <string name="lugares_mais_visitados">Lugares mais visitados</string>
    <string name="local">Local:</string>
    <string name="voltar">Voltar</string>
    <string name="tipos_de_mapa">Tipos de Mapa</string>
    <string name="mapa_normal">MAPA NORMAL</string>
    <string name="mapa_hibrido">MAPA HÍBRIDO</string>
    <string name="excluir">Excluir?</string>
    <string name="visitas">Visitas</string>
    <string name="locais_mais_visitados">Locais mais visitados</string>
</resources>